--- a/index.html
+++ b/index.html
@@ -6,33 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dcd34e45ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
-    <div class="flex-container header">
-        <div class="flex-item">
-            <a href="#">Portfolio</a>
-        </div>
-        <div class="flex-item">
-            <a href="#">About</a>
-        </div>
-        <div class="flex-item">
-            <a href="#">Contact</a>
-        </div>
-    </div>
-    <div class="flex-container main">
-        <div class="flex-box">
-            <h1 class="intro">Hey There. I'm Ahmad.</h1>
-            <h1 class="profession">I'm a Full-stack Web Developer.</h1>
-            <p>I can help you build interactive and responsive websites. To be sure about the quality of my work, you may view my portfolio.</p>
-        </div>
-        <div>
-            <div class="flex-container">
-                <div></div>
+    <section class="flex-container outer-container">
+        <header id="navbar" class="flex-container">
+            <!--- Item to display logo -->
+            <div class="flex-item" id="logo">
+                Welcome
             </div>
-        </div>
-    </div>
+            <div class="flex-item remove-nav-item">
+                <a href="#">Portfolio</a>
+            </div>
+            <div class="flex-item remove-nav-item">
+                <a href="#">About</a>
+            </div>
+            <div class="flex-item remove-nav-item">
+                <a href="#">Contact</a>
+            </div>
+            <div class="flex-item" id="link">
+                <i class="fa-solid fa-bars"></i></i>
+            </div>
+        </header>
+        <section class="flex-container main-container">
+                <div><h1 class="intro">Hey There. I'm Ahmad.</h1></div>
+                <div></div><h1 class="profession">I'm a Full-stack Web Developer.</h1></div>
+                <div><p>I can help you build interactive and responsive websites. To be sure about the quality of my work, you may view my portfolio.</p></div>
+        </section>
+        <section class="lower-container social-links">
+            <ul class="icons">
+                <li><a href=#"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href=#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href=#"><i class="fa-regular fa-hand-peace"></i></a></li>
+                <li><a href=#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href=#"><i class="fa-sharp fa-solid fa-m"></i></a></li>
+            </ul>          
+        </section>
+    </section>
 </body>
 </html>
