--- a/index.html
+++ b/index.html
@@ -12,41 +12,43 @@
 </head>
 <body>
     <section class="flex-container outer-container">
-        <header id="navbar" class="flex-container">
-            <!--- Item to display logo -->
-            <div class="flex-item" id="logo">
-                Welcome
-            </div>
-            <div class="flex-item remove-nav-item">
-                <a href="#">Portfolio</a>
-            </div>
-            <div class="flex-item remove-nav-item">
-                <a href="#">About</a>
-            </div>
-            <div class="flex-item remove-nav-item">
-                <a href="#">Contact</a>
-            </div>
-            <div class="flex-item" id="link">
-                <i class="fa-solid fa-bars"></i></i>
-            </div>
+        <header class="flex-container">
+            <nav class="flex-container nav-bar">
+                <!--- Item to display logo -->
+                <div class="flex-item" id="logo">
+                    Welcome
+                </div>
+                <div class="flex-item remove-nav-item">
+                    <a href="#">Portfolio</a>
+                </div>
+                <div class="flex-item remove-nav-item">
+                    <a href="#">About</a>
+                </div>
+                <div class="flex-item remove-nav-item">
+                    <a href="#">Contact</a>
+                </div>
+                <div class="flex-item" id="link">
+                    <i class="fa-solid fa-bars"></i></i>
+                </div>
+            </nav>
         </header>
         <section class="flex-container main-container">
                 <div><h1 class="intro">Hey There. I'm Ahmad.</h1></div>
-                <div></div><h1 class="profession">I'm a Full-stack Web Developer.</h1></div>
-                <div><p>I can help you build interactive and responsive websites. To be sure about the quality of my work, you may view my portfolio.</p></div>
+                <div><h1 class="profession">I'm a Full-stack Web Developer.</h1></div>
+                <div class="para"><p>I can help you build interactive and responsive websites. To be sure about the quality of my work, you may view my portfolio.</p></div>
         </section>
         <section class="lower-container social-links">
             <ul class="icons">
-                <li><a href=#"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href=#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href=#"><i class="fa-regular fa-hand-peace"></i></a></li>
-                <li><a href=#"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href=#"><i class="fa-sharp fa-solid fa-m"></i></a></li>
+                <li><a href=#"><img src="./images/github.png"></a></li>
+                <li><a href=#"><img src="./images/i.png"><img src="./images/n.png"></a></li>
+                <li><a href=#"><img src="./images/v.png"></a></li>
+                <li><a href=#"><img src="./images/twitter.png"></a></li>
+                <li><a href=#"><img src="./images/m.png"></a></li>
             </ul>          
         </section>
     </section>
-    <section class="down-arrow">
+    <div class="down-arrow">
         <i class="fa-solid fa-chevron-down"></i>
-    </section>
+    </div>
 </body>
 </html>
