Capitalize the names of image files

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <ul class="icons">
                 <li><a href=#"><img src="./images/github.png"></a></li>
                 <li><a href=#"><img src="./images/i.png"><img src="./images/n.png"></a></li>
-                <li><a href=#"><img src="./images/v.png"></a></li>
+                <li><a href=#"><img src="./images/V.png"></a></li>
                 <li><a href=#"><img src="./images/twitter.png"></a></li>
-                <li><a href=#"><img src="./images/m.png"></a></li>
+                <li><a href=#"><img src="./images/M.png"></a></li>
             </ul>          
         </section>
     </section>
