--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </div>
             </nav>
         </header>
-        <section class="flex-container top-portion main-container">
-                <div><h1 class="intro">Hey There. I'm Ahmad.</h1></div>
-                <div><h1 class="profession">I'm a Full-stack Web Developer.</h1></div>
+        <section class="flex-container top-portion main-container header-up">
+                <div class="intro-div"><h1 class="intro">Hey There. I'm Ahmad.</h1></div>
+                <div class="profession-div"><h1 class="profession">I'm a Full-stack Web Developer.</h1></div>
                 <div class="para"><p>I can help you build interactive and responsive websites. To be sure about the quality of my work, you may view my portfolio.</p></div>
         </section>
         <section class="lower-container social-links">
@@ -54,14 +54,15 @@
 
     <!-- MY RECENT WORKS -->
     <section class="recent-works">
-        <h1 class="work-title">My Recent Works</h1>
+        <div class="work-title-div"><h1 class="work-title">My Recent Works</h1></div>
+        <div class="hash-image-div"><hr></div>
             <div class="grid-container my-work">
                 <div class="flex-container my-task-row">
                     <div class="work-item">
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-1.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>Phonetics for Kids</h3></div>
+                                <div class="work-spec-items"><h5>Phonetics for Kids</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -78,7 +79,7 @@
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-2.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>Being bi-lingual</h3></div>
+                                <div class="work-spec-items"><h5>Being bi-lingual</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -95,7 +96,7 @@
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-3.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>HTML Made Easy</h3></div>
+                                <div class="work-spec-items"><h5>HTML Made Easy</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -112,7 +113,7 @@
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-4.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>CSS Log</h3></div>
+                                <div class="work-spec-items"><h5>CSS Log</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -129,7 +130,7 @@
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-5.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>English Dictionary</h3></div>
+                                <div class="work-spec-items"><h5>English Dictionary</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -146,7 +147,7 @@
                         <div class="grid-container work-item-grid">
                             <div class="work-image"><img src="./images/proj-6.jpg"></div>
                             <div class="grid-container work-specs">
-                                <div class="work-spec-items"><h3>System Administration</h3></div>
+                                <div class="work-spec-items"><h5>System Administration</h5></div>
                                 <div class="recent-work-det">
                                     <ul>
                                         <li>Ruby</li>
@@ -169,15 +170,15 @@
         <div class="grid-container about-me-sub">
 
             <div class="grid-item about-me-grid">
-                <div class="about-me-heading"><h1>About Me</h1></div>
+                <div class="about-me-heading"><h1>About me</h1></div>
             </div>
 
             <div class="grid-item me-detail-grid">
-                <div class="detail-para"><p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p></div>
+                <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
             </div>
 
             <div class="grid-item see-btn-grid">
-                <button class="see-project-btn">Get my Resume</button>
+                <button class="see-resume-btn">Get my Resume</button>
             </div>
 
             <div class="grid-item view-skills-grid">
