Added Form Elements

--- a/index.html
+++ b/index.html
@@ -239,41 +239,19 @@
             <div class="touch-flex-item touch-item">
                 <div class="touch-class2">
                     <form>
-                        <table class="form-table">
-                            <tr class="form-tr couple-tr">
-                                <td class="form-td"><input type="text" placeholder="First Name"></td>
-                                <td class="form-td"><input type="text" placeholder="Last Name"></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td colspan="2" class="form-td"><input id="email" type="email" placeholder="E mail address"></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td colspan="2" class="form-td"><textarea>Typing something</textarea></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td><button class="see-project-btn">Get in touch</button></td>
-                                <td></td>
-                            </tr>
-                        </table>
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Last Name">
+                        <input id="email" type="email" placeholder="E mail address">
+                        <td colspan="2" class="form-td"><textarea>Typing something</textarea>
+                        <button class="see-project-btn">Get in touch</button>
                     </form>
                 </div>
                 <div class="touch-class3">
                     <form>
-                        <table class="form-table">
-                            <tr class="form-tr couple-tr">
-                                <td class="form-td"><input type="text" placeholder="Full Name"></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td class="form-td"><input id="email" type="email" placeholder="E mail address"></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td class="form-td"><textarea>Typing something</textarea></td>
-                            </tr>
-                            <tr class="form-tr">
-                                <td align="center"><button class="see-project-btn">Get in touch</button></td>
-                                <td></td>
-                            </tr>
-                        </table>
+                        <input type="text" placeholder="Full Name">
+                        <input id="email" type="email" placeholder="E mail address">
+                        <textarea>Typing something</textarea>
+                        <button class="see-project-btn">Get in touch</button>
                     </form>
                 </div>
             </div>
