--- a/index.html
+++ b/index.html
@@ -247,11 +247,12 @@
                     </form>
                 </div>
                 <div class="touch-class3">
-                    <form>
-                        <input type="text" placeholder="Full Name">
-                        <input id="email" type="email" placeholder="E mail address">
-                        <textarea>Typing something</textarea>
-                        <button class="see-project-btn">Get in touch</button>
+                    <form class="mob_form">
+                        <input type="text" maxlength="30" required 
+                         placeholder="Full Name">
+                        <input id="email" required type="email" placeholder="Email address">
+                        <textarea maxlength="500"  required>Typing something</textarea>
+                        <button class="see-project-btn mob_btn">Get in touch</button>
                     </form>
                 </div>
             </div>
