--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/dcd34e45ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="styles.css">
-    <title>Portfolio</title>
+    <title>Ahmed's Portfolio</title>
 </head>
 <body>
     <div class="main-container">
@@ -33,11 +33,11 @@
             <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
 
             <ul>
-                <li id="twitter"><a href=#"><img src="./images/twitter.png"></a></li>
-                <li id="linkedin"><a href=#"><img src="./images/in.png"></a></li>
-                <li id="m"><a href=#"><img src="./images/M.png"></a></li>
-                <li id="github"><a href=#"><img src="./images/github.png"></a></li>
-                <li id="v"><a href=#"><img src="./images/V.png"></a></li>
+                <li id="twitter"><a href=#"><img src="./images/twitter.png" alt="twitter icon"></a></li>
+                <li id="linkedin"><a href=#"><img src="./images/in.png" alt="linkedin icon"></a></li>
+                <li id="m"><a href=#"><img src="./images/M.png" alt="M icon"></a></li>
+                <li id="github"><a href=#"><img src="./images/github.png" alt="github icon"></a></li>
+                <li id="v"><a href=#"><img src="./images/V.png" alt="V icon"></a></li>
             </ul>
             <i class="fa-solid fa-chevron-down"></i>
         </section>
@@ -50,7 +50,7 @@
         <!-- MY RECENT WORKS -->
         <section class="recent-work">
             <div class="work-sample">
-                <img src="./images/proj-1.jpg">
+                <img src="./images/proj-1.jpg" alt="project 1">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -61,7 +61,7 @@
                 <a href="#" class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-2.jpg">
+                <img src="./images/proj-2.jpg" alt="Project 2">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -72,7 +72,7 @@
                 <a href="#" class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-3.jpg">
+                <img src="./images/proj-3.jpg" alt="Project 3">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -83,7 +83,7 @@
                 <a href="#" class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-4.jpg">
+                <img src="./images/proj-4.jpg" alt="Project 4">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -94,7 +94,7 @@
                 <a href="#" class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-5.jpg">
+                <img src="./images/proj-5.jpg" alt="project 5">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -105,7 +105,7 @@
                 <a href="#" class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-6.jpg">
+                <img src="./images/proj-6.jpg" alt="Project 6">
                 <h4>Multi-Post Stories Gain+Glory</h4>
                 <ul>
                     <li>Ruby</li>
@@ -126,7 +126,7 @@
             </div> 
             <div class="detailed-me">
                 <div class="about-me-item">
-                    <img src="./images/lan-icon.png">
+                    <img src="./images/lan-icon.png" alt="Languages icon">
                     <p>Languages</p>
                     <ul>
                         <li>HTML</li>
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="about-me-item">
-                    <img src="./images/frame-icon.png">
+                    <img src="./images/frame-icon.png" alt="frame works icons">
                     <p>Frameworks</p>
                     <ul>
                         <li>Node.js</li>
@@ -144,7 +144,7 @@
                     </ul>
                 </div>
                 <div class="about-me-item">
-                    <img src="./images/skill-icon.png">
+                    <img src="./images/skill-icon.png" alt="skills icon">
                     <p>Skills</p>
                     <ul>
                         <li>Github</li>
@@ -188,11 +188,11 @@
         <section>
             <div class="bottom-line">
                 <ul>
-                    <li><a href=#"><img src="./images/github.png"></a></li>
-                    <li><a href=#"><img src="./images/in.png"></li>
-                    <li><a href=#"><img src="./images/V.png"></a></li>
-                    <li><a href=#"><img src="./images/twitter.png"></a></li>
-                    <li><a href=#"><img src="./images/M.png"></a></li>
+                    <li><a href=#"><img src="./images/github.png" alt="github icon"></a></li>
+                    <li><a href=#"><img src="./images/in.png" alt="linkedin icon "></li>
+                    <li><a href=#"><img src="./images/V.png" alt="V icon"></a></li>
+                    <li><a href=#"><img src="./images/twitter.png" alt="twitter icon"></a></li>
+                    <li><a href=#"><img src="./images/M.png" alt="M icon"></a></li>
                 </ul>  
             </div>    
         </section>
