--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <section>
             <div class="bottom-line">
                 <ul>
-                    <li><a href=#"><img src="./images/github.png" alt="github icon"></a></li>
+                    <li><a href=#"><img src="./images/github.png" alt="github-icon"></a></li>
                     <li><a href=#"><img src="./images/in.png" alt="linkedin icon "></li>
                     <li><a href=#"><img src="./images/V.png" alt="V icon"></a></li>
                     <li><a href=#"><img src="./images/twitter.png" alt="twitter icon"></a></li>
