Add accessibility options

--- a/index.html
+++ b/index.html
@@ -164,10 +164,14 @@
                 <div class="desktop-form">
                     <form action="https://formspree.io/f/moqzdnpo" method="post">
                         <div id="full-name">
+                            <label id="first-name-label" class="labels">First Name</label>
                             <input id="first" type="text" name="first-name" placeholder="First Name">
+                            <label id="last-name-label" class="labels">Last Name</label>
                             <input id="last" type="text" name="last-name" placeholder="Last Name">
                         </div>
+                        <label id="email-label" class="labels">E-mail ID</label>
                         <input id="email" name="e-mail" type="email" placeholder="E mail address">
+                        <label id="message-label" class="labels">Message</label>
                         <textarea id="message" name="message" class="form-td">Typing something</textarea>
                         <button id="touch-btn" class="see-project-btn">Get in touch</button>
                     </form>
