--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
                             <li><a href="#">Portfolio</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Contact</a></li>
-                            <i class="fa-solid fa-bars"></i>
                         </ul>
+                    <div class="container accordion" id="accordion" onclick="myFunction(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
                     </div>
             </nav>
         </header>
+        <div id="panel">
+            <a href="#recent-work" class="drop-link">Portfolio</a>
+            <a href="#about" class="drop-link">About</a>
+            <a href="#contact" class="drop-link">Contact</a>
+        </div>
 
         <section class="headline">
             <h1 class="intro">Hey there. I'm Ahmad</h1>
@@ -48,7 +56,7 @@
 
 
         <!-- MY RECENT WORKS -->
-        <section class="recent-work">
+        <section class="recent-work" id="recent-work">
             <div class="work-sample">
                 <img src="./images/proj-1.jpg" alt="project 1">
                 <h4>Multi-Post Stories Gain+Glory</h4>
@@ -118,7 +126,7 @@
         </section>
 
         <!--- ABOUT ME -->
-        <section class="about-me">
+        <section class="about-me" id="about">
             <div class="top-about">
                 <h1>About me</h1>
                 <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
@@ -156,7 +164,7 @@
         </section>
 
         <!-- GET IN TOUCH -->
-        <section class="touch-div">
+        <section class="touch-div" id="contact">
             <div class="in-touch">
                 <div class="touch-text">
                     <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
@@ -204,5 +212,6 @@
             <p>ehmaddd@gmail.com</p>
         </div>
     </div>
+<script src="script.js"></script>
 </body>
 </html>
