--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/dcd34e45ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="styles.css">
     <title>Ahmed's Portfolio</title>
 </head>
 <body>
-    <div class="main-container">
 
         <header>
             <nav class="nav-bar">
                     <div id="logo"><h3>Welcome</h3></div>
                         <ul>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#recent-work">Portfolio</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     <div class="container accordion" id="accordion" onclick="myFunction(this)">
-                        <div class="bar1"></div>
-                        <div class="bar2"></div>
-                        <div class="bar3"></div>
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                            <div class="bar3"></div>
                     </div>
             </nav>
         </header>
@@ -57,72 +57,71 @@
 
         <!-- MY RECENT WORKS -->
         <section class="recent-work" id="recent-work">
-            <div class="work-sample">
-                <img src="./images/proj-1.jpg" alt="project 1">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                    <img src="" alt="project 1">
+                    <div class="flex-container modal-flex">
+                        <div class="mod-div-1">
+                            <h4></h4>
+                            <ul>
+                            </ul>
+                        </div>
+                        <div class="mod-div-2">
+                            <a href="" id="see-live" class="see-modal">See live <span class="material-symbols-rounded rot">output_circle</span></a>
+                            <a href="" id="see-source" class="see-modal">See source <svg viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17.9991 7.46114C17.9991 6.32124 17.6331 5.25043 16.9344 4.31779C17.2006 3.41969 17.2671 2.27979 17.2006 0.967185C17.1673 0.414508 16.7348 0 16.2024 0C15.903 0 13.3743 0.0345423 11.9104 1.38169C10.6461 1.1399 9.3152 1.1399 8.0176 1.38169C6.58692 0.0345423 4.05826 0 3.72555 0C3.1932 0 2.76067 0.414508 2.7274 0.967185C2.62758 2.27979 2.7274 3.41969 2.99357 4.31779C2.29486 5.28497 1.92887 6.35579 1.92887 7.46114C1.92887 9.8791 3.72555 12.0553 6.45383 13.0915C6.35401 13.2988 6.28747 13.5406 6.22093 13.7824C3.32629 13.4715 1.96215 10.7427 1.8956 10.639C1.6627 10.1209 1.06381 9.91364 0.564734 10.19C0.0656586 10.4318 -0.133972 11.0535 0.132202 11.5717C0.198745 11.7444 2.02869 15.4404 6.05457 15.8549V18.9637C6.05457 19.5509 6.4871 20 7.05272 20H12.8753C13.4409 20 13.8734 19.5509 13.8734 18.9637V14.8532C13.8734 14.2314 13.7403 13.6442 13.5074 13.1261C16.2024 12.0553 17.9991 9.91364 17.9991 7.46114Z" fill="white"/>
+                                </svg></a>
+                        </div>
+                        <div class="mod-div-3"><p class="details"></p></div>   
+                      </div>
+                </div>
+              </div>
+
+              <div class="work-sample">
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-2.jpg" alt="Project 2">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-3.jpg" alt="Project 3">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-4.jpg" alt="Project 4">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-5.jpg" alt="project 5">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
             <div class="work-sample">
-                <img src="./images/proj-6.jpg" alt="Project 6">
-                <h4>Multi-Post Stories Gain+Glory</h4>
+                <img>
+                <h4></h4>
                 <ul>
-                    <li>Ruby</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>PHP</li>
                 </ul>
-                <a href="#" class="see-project-btn">See Project</a>
+                <a class="see-project-btn">See Project</a>
             </div>
+        </section>
         </section>
 
         <!--- ABOUT ME -->
@@ -130,7 +129,7 @@
             <div class="top-about">
                 <h1>About me</h1>
                 <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-                <a href="#" class="see-resume-btn">Get My Resume</a>
+                <a class="see-resume-btn">Get My Resume</a>
             </div> 
             <div class="detailed-me">
                 <div class="about-me-item">
@@ -211,7 +210,6 @@
         <div class="footer">
             <p>ehmaddd@gmail.com</p>
         </div>
-    </div>
 <script src="script.js"></script>
 </body>
 </html>
