Add some more changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
-                    <div class="container accordion" id="accordion" onclick="myFunction(this)">
+                    <div class="container accordion" id="accordion">
                             <div class="bar1"></div>
                             <div class="bar2"></div>
                             <div class="bar3"></div>
